--- a/MindShape.Tests/MindShape.Tests.csproj
+++ b/MindShape.Tests/MindShape.Tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MindShape.Lib\MindShape.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
